# seqVar

./: LICENSE  QuickStart.md  README.md  pyproject.toml
data/: alignment.sam  calls.vcf  reads.fastq  ref.fa  truth.vcf
examples/: make_test_data.py  run_pipeline.sh
seqvar/: __init__.py  align.py  bam_utils.py  call_variants.py  cli.py  fasta.py  fastq_qc.py  sam.py  vcf.py  vcf_compare.py
tests/: conftest.py  test_bam_utils.py  test_call_variants.py  test_fastq_qc.py  test_sam.py  test_vcf.py  test_vcf_compare.py
